Add support for jdk 17